--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: RDI Personal
+description: A central hub for all things operations
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
